[gd_scene load_steps=2 format=3 uid="uid://dqj3m7y6n8k9p"]

[ext_resource type="Script" path="res://scripts/achievements/achievements_ui.gd" id="1_wk4p4"]

[node name="AchievementsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk4p4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "실적"
horizontal_alignment = 1

[node name="Stats" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UnlockedCount" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "달성: 0/0"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AchievementList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CloseButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "닫기"

[node name="UnlockPopup" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="UnlockPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UnlockPopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="UnlockPopup/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "실적 달성!"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="UnlockPopup/Panel/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="AchievementName" type="Label" parent="UnlockPopup/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "실적 이름"
horizontal_alignment = 1

[node name="Description" type="Label" parent="UnlockPopup/Panel/VBoxContainer"]
layout_mode = 2
text = "실적 설명"
horizontal_alignment = 1
autowrap_mode = 2

[node name="OKButton" type="Button" parent="UnlockPopup/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "확인"